force-app/main/default/objects/Quote_Document_Composer__mdt/Quote_Document_Composer__mdt.object-meta.xml
<CustomObject>
    <label>Quote Document Composer</label>
    <pluralLabel>Quote Document Composers</pluralLabel>
</CustomObject>