force-app/main/default/objects/Quote_Document_Composer__mdt/fields/Composer_Code__c.field-meta.xml
<CustomField>
    <fullName>Composer_Code__c</fullName>
    <description>Stable registry code for an approved Apex document composer.</description>
    <label>Composer Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>