force-app/main/default/objects/Quote_Document_Composer__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Order in which composers run.</description>
    <label>Display Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>