force-app/main/default/objects/Quote_Document_Composer__mdt/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <description>API name of an active autolaunched Flow that accepts context variables and returns contributed record collections.</description>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>