force-app/main/default/objects/Quote_Document_Composer__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only active composers run. Keep inactive until tested with representative quotes.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>