force-app/main/default/objects/Quote_Document_Composer__mdt/fields/Line_Dependency_Paths__c.field-meta.xml
<CustomField>
    <fullName>Line_Dependency_Paths__c</fullName>
    <description
  >Quote Line field paths read by this composer in addition to the standard document context. Separate paths with commas, semicolons, or new lines.</description>
    <label>Line Dependency Paths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>