force-app/main/default/objects/Quote_Document_Composer__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Content version. Increase this whenever composer output rules change.</description>
    <label>Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>